chore: Maintenance (#634)
- Migrate from Qlty to SonarQube Cloud
- Fix code issues identified by Sonar
- Integrate Sonar plugin
- Add test coverage upload configuration

{patch}

Signed-off-by: Esta Nagy <nagyesta@gmail.com>